# gameboy_emulator

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  main.cpp  vcpkg.json
.github/workflows/: linux_build.yml  main.yml
Src/: CMakeLists.txt  Cpu.hpp
Src/CartridgeLoader/: CMakeLists.txt  cartridgeloader.cpp  cartridgeloader.hpp
Src/Cpu/: CMakeLists.txt  cpu.cpp  cpu.hpp
Src/decoder/: CMakeLists.txt  opcodes.json
Src/decoder/include/: decoder.hpp
Src/decoder/src/: decoder.cpp  main.cpp
Src/decoder/tests/: CMakeLists.txt  test_decoder.cpp
Tests/: CMakeLists.txt  ut_demo.cpp
src/: CMakeLists.txt  load.cpp  log.cpp  log.hpp  main.cpp  mem.cpp  mem.hpp  print.cpp  test_data.cpp
src/assembler/: CMakeLists.txt
src/assembler/include/: assembler.hpp
src/assembler/src/: assembler.cpp
src/assembler/ut/: CMakeLists.txt  test_assembler.cpp
src/cartridge_loader/: CMakeLists.txt
src/cartridge_loader/include/: cartridge_loader.hpp
src/cartridge_loader/src/: cartridge_loader.cpp
src/common/: CMakeLists.txt  common.hpp
src/common/include/: common.hpp
src/common/src/: common.cpp
src/common/tests/: CMakeLists.txt  test_common.cpp
src/cpu/: CMakeLists.txt
src/cpu/include/: constants.hpp  cpu.hpp  data.hpp  reg.hpp  register.hpp
src/cpu/src/: alu.cpp  arith.cpp  cpu.cpp  cpu_impl.cpp  cpu_impl.hpp  ctrl.cpp  data.cpp  int.cpp  jmp.cpp  ld.cpp  misc.cpp  srb.cpp  timer.cpp
src/cpu/src/instructions/: arithmetic.cpp  arithmetic_logic.cpp  load.cpp
src/cpu/tests/: CMakeLists.txt  test_cpu.cpp  test_cpu_data.cpp
src/cpu/tests/cpu/: test_cpu_data.cpp
src/cpu/tests/instructions/: CMakeLists.txt
src/cpu/tests/instructions/arithmetic/: CMakeLists.txt  test_arithmetic.cpp
src/cpu/tests/instructions/load/: CMakeLists.txt  program_creator.cpp  program_creator.hpp  test_ld_16.cpp  test_ld_8.cpp  test_load.cpp
src/cpu/ut/: CMakeLists.txt  test_alu.cpp  test_arith.cpp  test_arithmetic.cpp  test_ctrl.cpp  test_int.cpp  test_jmp.cpp  test_ld_16.cpp  test_ld_8.cpp  test_new_approach.cpp  utils.h
src/cpu/ut/big_tests/: CMakeLists.txt  big_tests_utils.cpp  big_tests_utils.h
src/cpu/ut/big_tests/alu/: test_adc.cpp  test_add.cpp  test_alu.cpp  test_bit.cpp  test_res.cpp  test_rl.cpp  test_rlc.cpp  test_rr.cpp  test_rrc.cpp  test_set.cpp  test_sla.cpp  test_sra.cpp  test_srl.cpp  test_sub.cpp  test_swap.cpp
src/cpu/ut/big_tests/cpu/: test_adc.cpp  test_add.cpp  test_and.cpp  test_cp.cpp  test_daa.cpp  test_e8.cpp  test_f8.cpp  test_inc_dec_16.cpp  test_inc_dec_8.cpp  test_jmp.cpp  test_ld_16.cpp  test_ld_8.cpp  test_or.cpp  test_other_alu.cpp  test_rlc.cpp  test_sbc.cpp  test_srb.cpp  test_sub.cpp  test_xor.cpp
src/decoder/: CMakeLists.txt
src/decoder/include/: decoder.hpp
src/decoder/src/: decoder.cpp
src/decoder/tests/: test_decoder.cpp
src/decoder/ut/: test_decoder.cpp
src/lcd/: CMakeLists.txt  lcd.cpp
src/lcd/include/: lcd.hpp
src/ppu/: CMakeLists.txt  ppu.cpp
src/ppu/include/: ppu.hpp
src/ppu/src/: lcd_ctrl.cpp  pixel_fetcher.cpp  pixel_fetcher.hpp  pixel_fifo.cpp  ppu_impl.cpp  ppu_impl.hpp  ppu_modes.cpp  tile_info.cpp  tile_info.hpp
src/ppu/ut/: test_ppu.cpp
src/res/: dmg_boot_rom.gb
src/translator/: CMakeLists.txt
src/translator/include/: translator.hpp
src/translator/src/: translator.cpp
src/translator/tests/: CMakeLists.txt  test_translator.cpp
src/translator/ut/: test_translator.cpp
temp/: CMakeLists.txt  child_learn.cpp  test_wnd.cpp
